src/test/ui/impl-trait/universal-mismatched-type.stderr
error[E0308]: mismatched types
  --> $DIR/universal-mismatched-type.rs:4:5
   |
LL | fn foo(x: impl Debug) -> String {
   |           ----------     ------ expected `std::string::String` because of return type
   |           |
   |           this type parameter
LL |     x
   |     ^ expected struct `std::string::String`, found type parameter `impl Debug`
   |
   = note: expected type `std::string::String`
              found type `impl Debug`
   = help: type parameters must be constrained to match other types
   = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
